--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <html>
   <head>
-    안녕하세요
+    .title{
+            text-align: center;
+            font-size: 2em;
+        }
+        .subtitle{
+            width: 50%;
+            margin: 0 auto;
+            text-align: right;
+            font-size: 1.2em;
+        }
+        .in{
+            font-size: 1.4em;
+            text-align: center;
+        }
+    </style>
+    
   </head>
   <body>
-    <h1>안녕하세요</h1>
+    <div class="title">
+        <h1>별</h1>
+    </div>
+    <div class="subtitle">
+        <h2>이정하</h2> 
+    </div>
+    <div class="in">
+        <p>너에게 가지 못하고</p>
+        <p>나는 서성인다</p>
+        <br>
+        <p>내 목소리 닿을 수 없는</p>
+        <p>먼곳의 이름이여</p>
+        <p>차마 사랑한다 말하지 못하고</p>
+        <p>그대는 정녕 한 발짝도</p>
+        <p>내게 내려오지 않긴가요</p>
+    </div>
   </body>
 </html>
