--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <style>
-      .title{
+        body{
+            background-color: #222;
+            margin: 0;
+            padding: 0;
+        }
+        h1,h2,p{
+            margin: 0;
+            padding: 0;
+        }
+        .wrap{
+            height: 100vh;
+            width: 40%;
+            margin: 0 auto;
+            background-color: #ddd;
+        }
+        .title{
             text-align: center;
             font-size: 2em;
         }
@@ -16,24 +35,26 @@
             text-align: center;
         }
     </style>
-    
-  </head>
-  <body>
-    <div class="title">
-        <h1>별</h1>
+</head>
+<body>
+    <div class="wrap">
+
+        <div class="title">
+            <h1>별</h1>
+        </div>
+        <div class="subtitle">
+            <h2>이정하</h2> 
+        </div>
+        <div class="in">
+            <p>너에게 가지 못하고</p>
+            <p>나는 서성인다</p>
+            <br>
+            <p>내 목소리 닿을 수 없는</p>
+            <p>먼곳의 이름이여</p>
+            <p>차마 사랑한다 말하지 못하고</p>
+            <p>그대는 정녕 한 발짝도</p>
+            <p>내게 내려오지 않긴가요</p>
+        </div>
     </div>
-    <div class="subtitle">
-        <h2>이정하</h2> 
-    </div>
-    <div class="in">
-        <p>너에게 가지 못하고</p>
-        <p>나는 서성인다</p>
-        <br>
-        <p>내 목소리 닿을 수 없는</p>
-        <p>먼곳의 이름이여</p>
-        <p>차마 사랑한다 말하지 못하고</p>
-        <p>그대는 정녕 한 발짝도</p>
-        <p>내게 내려오지 않긴가요</p>
-    </div>
-  </body>
+    </body>
 </html>
