--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @media screen and (max-width:767px){
+            .wrap{
+                width: 100%;
+            }
+            .wrap *{
+                width: 100%;
+            }
+        }
         body{
             background-color: #222;
             margin: 0;
@@ -16,7 +24,7 @@
         }
         .wrap{
             height: 100vh;
-            width: 40%;
+            width: 1024px;
             margin: 0 auto;
             background-color: #ddd;
         }
