--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1">
     <title>Document</title>
     <style>
     
@@ -35,13 +35,9 @@
             font-size: 1.4em;
             text-align: center;
         }
-        @media screen and (max-width:767px){
-            body{
-                margin: 0;
-                padding: 0;
-                background-color: #222;
-            }
-            .wrap{
+        @media screen and (max-width:1024px){
+            
+            body > .wrap{
                 width: 100%;
             }
         }
